--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# These will be automatically created by Neon Launchpad (https://neon.new).
-# You will also need to 
+# Clerk configuration, get this key from your [Dashboard](dashboard.clerk.com)
+VITE_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+
+# Database URL for PostgreSQL (Neon)
 VITE_DATABASE_URL=
-VITE_DATABASE_URL_POOLER=
+# Database URL for PostgreSQL (Drizzle)
+DATABASE_URL=
